--- a/MiniURL-web-app/src/main/resources/application.properties
+++ b/MiniURL-web-app/src/main/resources/application.properties
@@ -7,4 +7,6 @@ spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
+
+ShortUrlService.hostname=http://localhost:8080/
