--- a/MiniURL-web-app/src/main/resources/application.properties
+++ b/MiniURL-web-app/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.h2.console.enabled=true
 spring.h2.console.path=/db
 
+
+
 # Datasource
 spring.datasource.url=jdbc:h2:file:~/test
 spring.datasource.username=sa
@@ -10,3 +12,4 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.jpa.hibernate.ddl-auto=create-drop
 
 ShortUrlService.hostname=http://localhost:8080/
+spring.resources.add-mappings=true
