Fixed database problem with IDs

--- a/MiniURL-web-app/src/main/resources/application.properties
+++ b/MiniURL-web-app/src/main/resources/application.properties
@@ -1,15 +1,15 @@
 spring.h2.console.enabled=true
-spring.h2.console.path=/db
-
-
+spring.h2.console.path=/dbase
 
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/test
+spring.datasource.url=jdbc:h2:file:~/urlTest
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.jpa.hibernate.ddl-auto=create-drop
 
-ShortUrlService.hostname=http://localhost:8080/
 spring.resources.add-mappings=true
+
+# Values
+ShortUrlService.hostname=http://localhost:8080/
