--- a/MiniURL-web-app/src/main/resources/test.properties
+++ b/MiniURL-web-app/src/main/resources/test.properties
@@ -1,9 +1,9 @@
-server.port=8080
+server.port=8081
 spring.h2.console.enabled=true
-spring.h2.console.path=/dbase
+spring.h2.console.path=/testdbase
 
 # Datasource
-spring.datasource.url=jdbc:h2:file:~/urlTest
+spring.datasource.url=jdbc:h2:file:~/urlTestDB
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
